--- a/src/app/styles/_schema.scss
+++ b/src/app/styles/_schema.scss
@@ -1,6 +1,6 @@
 $black: #1c1b1f;
-$purple: #40196d;
-$lightpurple: #f2f2fb;
+$blue: #002769;
+$lightblue: #0e46a7;
 $gold: gold;
 $green: #00d0aa;
 $darkgrey: #25262a;
