--- a/src/app/styles/_schema.scss
+++ b/src/app/styles/_schema.scss
@@ -1,7 +1,7 @@
 $black: #1c1b1f;
 $blue: #002769;
 $lightblue: #0e46a7;
-$gold: gold;
+$gold: #FFC30D;
 $green: #00d0aa;
 $darkgrey: #25262a;
 $lightgrey: #2d2e32;
