--- a/src/app/styles/desktop.css
+++ b/src/app/styles/desktop.css
@@ -1,5 +1,6 @@
 main {
-  margin-top: 6em;
+  margin-top: 5em;
+  margin-bottom: 10em;
 }
 
 nav {
@@ -64,33 +65,128 @@ nav .mobile-nav-toggle {
   display: none;
 }
 
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 0em 3em;
+  padding-top: 3em;
+  padding-bottom: 3em;
+  gap: 1em;
+  margin-top: 6em;
+  background-color: #0e46a7;
+}
+footer .footer-info {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  gap: 1em;
+}
+footer .footer-info img {
+  width: 80%;
+}
+footer .footer-info p {
+  color: white;
+  font-weight: 500;
+  margin: 0;
+}
+footer .footer-info .icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+footer .footer-info .icon-container span:hover {
+  cursor: pointer;
+}
+footer .footer-info h3 {
+  color: #FFC30D;
+  font-size: 1.25rem;
+  font-weight: 900;
+  margin: 0;
+}
+footer .footer-info a {
+  color: white;
+  font-weight: 500;
+  text-decoration: none;
+  transition: all ease-in-out 0.3s;
+}
+footer .footer-info a:hover {
+  color: #FFC30D;
+  transform: translateX(5px);
+}
+
+#footer-end {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #0e46a7;
+  padding: 0em 3em;
+  padding-top: 1.5em;
+  padding-bottom: 1.5em;
+}
+#footer-end p {
+  font-size: 0.875rem;
+  font-weight: 500;
+  margin: 0;
+  color: white;
+}
+
 .homepage {
   display: flex;
   flex-direction: column;
-  padding: 0em 3em;
 }
 .homepage .hero-container {
   display: flex;
+  align-items: center;
   width: 100%;
   gap: 2em;
-  margin-top: 3em;
+  background-color: #002769;
   margin-bottom: 6em;
+  padding: 0em 3em;
+  padding-top: 4em;
+  padding-bottom: 4em;
 }
 .homepage .hero-container .hero-left {
   display: flex;
   flex-direction: column;
   gap: 1em;
-  width: 45%;
+  width: 55%;
 }
 .homepage .hero-container .hero-left h1 {
-  color: #1c1b1f;
+  color: white;
   font-size: 3rem;
   font-weight: 800;
+  margin: 0;
+  width: 90%;
+}
+.homepage .hero-container .hero-left p {
+  font-size: 1.1rem;
+  font-weight: 500;
+  color: white;
+}
+.homepage .hero-container .hero-left button {
+  background-color: #0e46a7;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 0.75em 1.5em;
+  color: white;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 600;
+  border: none;
+  border-radius: 0.5em;
+  transition: 0.3s;
+}
+.homepage .hero-container .hero-left button:hover {
+  background-color: white;
+  color: #002769;
 }
 .homepage .hero-container .hero-right {
   display: flex;
-  flex-direction: column;
-  width: 55%;
+  width: 45%;
+  justify-content: right;
+}
+.homepage .hero-container .hero-right img {
+  width: 100%;
 }
 .homepage .subjects-container {
   display: flex;
@@ -107,21 +203,23 @@ nav .mobile-nav-toggle {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  width: 80%;
+  width: 75%;
   gap: 2em;
 }
 .homepage .subjects-container .subjects-container-sub .subject {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 0.5em;
-  padding: 1em;
-  width: 31%;
+  gap: 1em;
+  padding: 2em 0.5em;
+  width: 30%;
   background-color: #002769;
   color: white;
-  font-size: 1rem;
-  font-weight: 500;
+  font-size: 1.4rem;
+  font-weight: 400;
   border-radius: 0.5em;
+  box-shadow: 0 4px 13px 2px rgba(0, 0, 0, 0.075);
   transition: 0.3s;
 }
 .homepage .subjects-container .subjects-container-sub .subject:hover {
