--- a/src/app/styles/desktop.scss
+++ b/src/app/styles/desktop.scss
@@ -84,7 +84,7 @@ footer {
   padding-bottom: 3em;
   gap: 1em;
   margin-top: 6em;
-  background-color: $lightblue;
+  background-color: $blue;
 
   .footer-info {
     display: flex;
@@ -137,7 +137,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: $lightblue;
+  background-color: $blue;
   padding: $desktoppadding;
   padding-top: 1.5em;
   padding-bottom: 1.5em;
@@ -249,6 +249,7 @@ footer {
         border-radius: 0.5em;
         box-shadow: 0 4px 13px 2px rgba(0, 0, 0, 0.075);
         transition: 0.3s;
+        text-decoration: none;
 
         &:hover {
           background-color: $lightblue;
