--- a/src/app/styles/desktop.scss
+++ b/src/app/styles/desktop.scss
@@ -357,7 +357,7 @@ footer {
         input,select {
           padding: 0.5em 1.5em;
           outline: none;
-          width: 150px;
+          width: max-content;
         }
       }
 
