--- a/src/app/styles/desktop.scss
+++ b/src/app/styles/desktop.scss
@@ -94,6 +94,7 @@ footer {
 
     img {
       width: 80%;
+      height: auto;
     }
 
     p {
@@ -193,6 +194,7 @@ footer {
         font-family: inherit;
         font-size: 1rem;
         font-weight: 600;
+        outline: none;
         border: none;
         border-radius: 0.5em;
         transition: 0.3s;
@@ -200,6 +202,7 @@ footer {
         &:hover {
           background-color: white;
           color: $blue;
+          cursor: pointer;
         }
       }
     }
@@ -211,6 +214,7 @@ footer {
 
       img {
         width: 100%;
+        height: auto;
       }
     }
   }
@@ -291,11 +295,44 @@ footer {
       display: flex;
       flex-direction: column;
 
+      .title {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0.75em;
+        background-color: $blue;
+        border-radius: 0.1em;
+        font-weight: 500;
+        color: rgb(232, 232, 232);
+        gap: 1em;
+
+        span {
+          display: flex;
+          width: 20%;
+          font-size: 1.1rem;
+        }
+
+        button {
+          font-family: inherit;
+          font-weight: 500;
+          background-color: $lightblue;
+          border: none;
+          outline: none;
+          color: white;
+          width: max-content;
+          padding: 0.75em 1.5em;
+          border-radius: 0.25em;
+          transition: 0.3s;
+          display: hidden;
+          opacity: 0;
+        }
+      }
+
       .class {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 0.75em 0.5em;
+        padding: 0.75em;
         background-color: rgb(227, 227, 227);
         border-radius: 0.1em;
         font-weight: 500;
@@ -309,10 +346,12 @@ footer {
 
         button {
           font-family: inherit;
+          font-weight: 500;
           background-color: $lightblue;
           border: none;
           outline: none;
           color: white;
+          width: max-content;
           padding: 0.75em 1.5em;
           border-radius: 0.25em;
           transition: 0.3s;
@@ -354,7 +393,8 @@ footer {
           width: 100px;
         }
 
-        input,select {
+        input,
+        select {
           padding: 0.5em 1.5em;
           outline: none;
           width: max-content;
