--- a/src/app/styles/mobile.css
+++ b/src/app/styles/mobile.css
@@ -140,6 +140,9 @@
   .schools-container p {
     font-size: 1.1rem;
   }
+  .schools-container .classes-container .classes-sub .title {
+    display: none;
+  }
   .schools-container .classes-container .classes-sub .class {
     align-items: flex-start;
     flex-direction: column;
